--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/DiagramStats.js"></script>
     <script type="text/javascript" src="js/DataProfile.js"></script>
     <script type="text/javascript" src="js/DataProfile1.js"></script>
+    <script type="text/javascript" src="js/Account.js"></script>
     <script type="text/javascript" src="js/canvasjs.min.js"></script>
     <script type="text/javascript" src="js/jquery.i18n.min.js"></script>
 </head>
@@ -32,6 +33,10 @@
         <i class="fa fa-address-card"></i>
         Data Profile 1
       </div>
+      <div id="DatAccount" onclick="loadDataAccount('W4');">
+        <i class="fa fa-user-circle-o"></i>
+        Data Account
+      </div>
       <div class="clear row" id="Widgets">
         <div id="W1">
         </div>
@@ -39,12 +44,9 @@
         </div>
         <div id="W3">
         </div>
+        <div id="W4">
+        </div>
       </div>
     </div>
-    <div class="pie"></div>
-    <div class="pie"
-         style="animation-delay: -20s"></div>
-    <div class="pie"
-         style="animation-delay: -60s"></div>
 </body>
 </html>
